# ircqrs

./: .gitignore  Cargo.toml  README.md
src/: handlers.rs  main.rs  templates.rs
templates/: base.html  homepage.html  participant.html  quote.html  robots.txt  style.css
testquotes/: 10.txt  5.txt  9.txt
