[package]
name = "ircqrs"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.17"
boilerplate = "0.2.1"
html-escaper = "0.2.0"
include_dir = "0.7.3"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.147"
tokio = { version = "1.21.2", features = ["full"] }
