[package]
name = "ircqrs"
description = "irc quote website thingy"
repository = "https://github.com/xfnw/ircqrs/"
license = "MIT"
version = "0.2.3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.9"
boilerplate = "0.2.5"
html-escaper = "0.2.0"
include_dir = "0.7.3"
lazy_static = "1.4.0"
rand = "0.8.5"
serde = "1.0.152"
tokio = { version = "1.26.0", features = ["full"] }
