[package]
name = "ircqrs"
description = "irc quote website thingy"
repository = "https://github.com/xfnw/ircqrs/"
license = "MIT"
version = "0.3.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8"
boilerplate = "1"
html-escaper = "0.2.0"
include_dir = "0.7.3"
percent-encoding = "2.3.0"
rand = "0.9"
serde = "1.0.189"
tokio = { version = "1.33.0", features = ["full"] }
